--- a/First Semester/HW4/Task3/Task3/Task3.vcxproj.filters
+++ b/First Semester/HW4/Task3/Task3/Task3.vcxproj.filters
@@ -20,8 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\file.txt">
-      <Filter>Файлы ресурсов</Filter>
-    </Text>
+    <Text Include="file.txt" />
   </ItemGroup>
 </Project>
