--- a/First Semester/HW4/Task3/Task3/Task3.vcxproj
+++ b/First Semester/HW4/Task3/Task3/Task3.vcxproj
@@ -67,7 +67,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\file.txt" />
+    <Text Include="file.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
