--- a/First Semester/HW8/Task2/Task2/Task2.vcxproj
+++ b/First Semester/HW8/Task2/Task2/Task2.vcxproj
@@ -65,6 +65,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BinaryTree.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryTree.h" />
