--- a/Second Semester/HW2/List/List/List.csproj
+++ b/Second Semester/HW2/List/List/List.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8C4E3B91-AD3F-4E3E-AF97-4DEA5C5D0440}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HW2_List</RootNamespace>
+    <RootNamespace>MyList</RootNamespace>
     <AssemblyName>List</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
