--- a/Second Semester/HW2/Stack Calculator/Stack Calculator/Stack Calculator.csproj
+++ b/Second Semester/HW2/Stack Calculator/Stack Calculator/Stack Calculator.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F1A8AF1F-40A7-4F5C-956D-E97DF539C814}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HW2_StackCalculator</RootNamespace>
+    <RootNamespace>StackCalculator</RootNamespace>
     <AssemblyName>Stack Calculator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
