--- a/Second Semester/HW4/ParseTree/ParseTree/ParseTree.csproj
+++ b/Second Semester/HW4/ParseTree/ParseTree/ParseTree.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateTree.cs" />
+    <Compile Include="Tree.cs" />
     <Compile Include="Operand.cs" />
     <Compile Include="OperationAddition.cs" />
     <Compile Include="OperationDivision.cs" />
