--- a/Third Semester/GraphicsEditor/GraphicsEditor/GraphicsEditor.csproj
+++ b/Third Semester/GraphicsEditor/GraphicsEditor/GraphicsEditor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D48D298B-8A26-4CD9-BC07-7DD6E16ED902}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{3BD7696B-677B-44B1-9DC3-B4922513BB86}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Robots</RootNamespace>
-    <AssemblyName>Robots</AssemblyName>
+    <RootNamespace>GraphicsEditor</RootNamespace>
+    <AssemblyName>GraphicsEditor</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,13 +39,45 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EditorLogic.cs" />
+    <Compile Include="StateHandler.cs" />
+    <Compile Include="Line.cs" />
+    <Compile Include="MyGraphicsEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyGraphicsEditor.Designer.cs">
+      <DependentUpon>MyGraphicsEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Robots.cs" />
+    <EmbeddedResource Include="MyGraphicsEditor.resx">
+      <DependentUpon>MyGraphicsEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
